# web-servers-for-testing

./: README.md
elixir/: mix.exs
elixir/test/: testingwebserver_test.exs
elixir/testingwebserver/: .gitignore
elixir/testingwebserver/test/: testingwebserver_test.exs
golang/: go.mod  myApiClient_test.go  myClient_test.go
javascript/: myApiClient.express.test.js  myApiClient.hapi.test.js  myApiClient.js  myApiClient.koa.test.js  myApiClient.test.js  package-lock.json  package.json  sum.test.js
kotlin-and-java/: build.gradle.kts  settings.gradle.kts
kotlin-and-java/src/main/kotlin/: Game.kt
kotlin-and-java/src/test/java/: MyApiClientJavaTest.java
kotlin-and-java/src/test/kotlin/: FakeTest.kt  MyApiClientTest.kt  MyClientTest.kt  ObservingCommandsIndirectlyTest.kt  ObservingCommandsTest.kt  ObservingQueriesDirectlyTest.kt  ObservingQueriesIndirectlyTest.kt  ObservingQueriesTest.kt  StubMockSpyWithLibraryTest.kt  StubMockSpyWithoutLibraryTest.kt
python/: .gitignore  pyproject.toml  test_my_api_client.py  test_my_api_client__httpserver.py  test_my_api_client__httpserverlib.py
ruby/: Gemfile
ruby/spec/: my_api_client2_spec.rb  my_api_client_spec.rb  spec_helper.rb
