[tool.poetry]
name = "testingwebserver"
version = "0.1.0"
description = ""
authors = ["Luís Soares <lsoares@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
pytest-httpserver = "^1.0.8"
aiohttp = "^3.9.1"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
